<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    app:alignmentMode="alignBounds"
    app:columnCount="4"
    app:layout_gravity="center"
    app:orientation="horizontal"
    app:rowOrderPreserved="false">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/number"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="end"
        android:inputType="none"
        app:layout_columnSpan="4"
        app:layout_gravity="fill"/>

    <Space
        app:layout_columnSpan="2"
        app:layout_gravity="fill"/>

    <Button
        android:id="@+id/clr"
        android:layout_width="0dp"
        android:contentDescription="@string/desc_clr"
        android:text="@string/clr"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <com.mikepenz.iconics.view.IconicsButton
        android:id="@+id/del"
        android:layout_width="0dp"
        android:contentDescription="@string/desc_del"
        android:text="@string/del"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_7"
        android:layout_width="0dp"
        android:text="@string/digit_7"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_8"
        android:layout_width="0dp"
        android:text="@string/digit_8"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_9"
        android:layout_width="0dp"
        android:text="@string/digit_9"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/op_add"
        android:layout_width="0dp"
        android:contentDescription="@string/desc_op_add"
        android:text="@string/op_add"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_4"
        android:layout_width="0dp"
        android:text="@string/digit_4"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_5"
        android:layout_width="0dp"
        android:text="@string/digit_5"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_6"
        android:layout_width="0dp"
        android:text="@string/digit_6"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/op_sub"
        android:layout_width="0dp"
        android:contentDescription="@string/desc_op_sub"
        android:text="@string/op_sub"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_1"
        android:layout_width="0dp"
        android:text="@string/digit_1"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_2"
        android:layout_width="0dp"
        android:text="@string/digit_2"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_3"
        android:layout_width="0dp"
        android:text="@string/digit_3"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/op_mul"
        android:layout_width="0dp"
        android:contentDescription="@string/desc_op_mul"
        android:text="@string/op_mul"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/dec_point"
        android:layout_width="0dp"
        android:contentDescription="@string/desc_dec_point"
        android:text="@string/dec_point"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/digit_0"
        android:layout_width="0dp"
        android:text="@string/digit_0"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/eq"
        android:layout_width="0dp"
        android:contentDescription="@string/desc_eq"
        android:text="@string/eq"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

    <Button
        android:id="@+id/op_div"
        android:layout_width="0dp"
        android:contentDescription="@string/desc_op_div"
        android:text="@string/op_div"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"/>

</android.support.v7.widget.GridLayout>
